feat: mypage, soms api docs
